👌 IMPROVE: Js animations for slider

--- a/home.html
+++ b/home.html
@@ -37,10 +37,10 @@
                     Heeft Jou Geliked
                 </strong>
                 <div class="col-4 d-flex justify-content-end">
-                    <btn class="btn btn-white font-weight-bold p-0 px-1">
+                    <btn class="btn btn-white font-weight-bold p-0 px-1 red_slider" data-attribute="left">
                         &#60;
                     </btn>
-                    <btn class="btn btn-white font-weight-bold p-0 px-1">
+                    <btn class="btn btn-white font-weight-bold p-0 px-1 red_slider" data-attribute="right">
                         &#62;
                     </btn>
 
@@ -48,7 +48,91 @@
             </div>
             <!-- END TITLE -->
             <!-- SLIDER ROW -->
-            <div class="row d-flex flex-nowrap">
+            <div class="row d-flex flex-nowrap slider sliderRed" data-attribute="0">
+                <a href=" profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
+                    <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        width="100%" alt="" srcset="">
+                    <div
+                        class="text-dark bg-light d-flex align-items-center rounded-pill py-1 mb-2 px-3 card__caroussel_text">
+                        <span class="col-9 text_content"><strong>Name</strong><br />Plaats</span>
+                        <span class="col-3 d-flex justify-content-end "> <span
+                                class="p-2 rounded-circle bg-danger text-white like-btn d-flex align-items-center justify-content-center"><i
+                                    class="bi-heart-fill"></i></span>
+                        </span>
+                    </div>
+
+
+                </a>
+                <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
+                    <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        width="100%" alt="" srcset="">
+                    <div
+                        class="text-dark bg-light d-flex align-items-center rounded-pill py-1 mb-2 px-3 card__caroussel_text">
+                        <span class="col-9 text_content"><strong>Name</strong><br />Plaats</span>
+                        <span class="col-3 d-flex justify-content-end "> <span
+                                class="p-2 rounded-circle bg-danger text-white like-btn d-flex align-items-center justify-content-center"><i
+                                    class="bi-heart-fill"></i></span>
+                        </span>
+                    </div>
+
+
+                </a>
+                <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
+                    <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        width="100%" alt="" srcset="">
+                    <div
+                        class="text-dark bg-light d-flex align-items-center rounded-pill py-1 mb-2 px-3 card__caroussel_text">
+                        <span class="col-9 text_content"><strong>Name</strong><br />Plaats</span>
+                        <span class="col-3 d-flex justify-content-end "> <span
+                                class="p-2 rounded-circle bg-danger text-white like-btn d-flex align-items-center justify-content-center"><i
+                                    class="bi-heart-fill"></i></span>
+                        </span>
+                    </div>
+
+
+                </a>
+                <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
+                    <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        width="100%" alt="" srcset="">
+                    <div
+                        class="text-dark bg-light d-flex align-items-center rounded-pill py-1 mb-2 px-3 card__caroussel_text">
+                        <span class="col-9 text_content"><strong>Name</strong><br />Plaats</span>
+                        <span class="col-3 d-flex justify-content-end "> <span
+                                class="p-2 rounded-circle bg-danger text-white like-btn d-flex align-items-center justify-content-center"><i
+                                    class="bi-heart-fill"></i></span>
+                        </span>
+                    </div>
+
+
+                </a>
+                <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
+                    <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        width="100%" alt="" srcset="">
+                    <div
+                        class="text-dark bg-light d-flex align-items-center rounded-pill py-1 mb-2 px-3 card__caroussel_text">
+                        <span class="col-9 text_content"><strong>Name</strong><br />Plaats</span>
+                        <span class="col-3 d-flex justify-content-end "> <span
+                                class="p-2 rounded-circle bg-danger text-white like-btn d-flex align-items-center justify-content-center"><i
+                                    class="bi-heart-fill"></i></span>
+                        </span>
+                    </div>
+
+
+                </a>
+                <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
+                    <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        width="100%" alt="" srcset="">
+                    <div
+                        class="text-dark bg-light d-flex align-items-center rounded-pill py-1 mb-2 px-3 card__caroussel_text">
+                        <span class="col-9 text_content"><strong>Name</strong><br />Plaats</span>
+                        <span class="col-3 d-flex justify-content-end "> <span
+                                class="p-2 rounded-circle bg-danger text-white like-btn d-flex align-items-center justify-content-center"><i
+                                    class="bi-heart-fill"></i></span>
+                        </span>
+                    </div>
+
+
+                </a>
                 <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
                     <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
                         width="100%" alt="" srcset="">
@@ -64,6 +148,7 @@
 
                 </a>
 
+
             </div>
             <!-- END SLIDER ROW -->
 
@@ -73,10 +158,10 @@
                     Deze mensn vind je misschien ook leuk
                 </strong>
                 <div class="col-4 d-flex justify-content-end">
-                    <btn class="btn btn-white font-weight-bold p-0 px-1">
+                    <btn class="btn btn-white font-weight-bold p-0 px-1 black_slider" data-attribute="left">
                         &#60;
                     </btn>
-                    <btn class="btn btn-white font-weight-bold p-0 px-1">
+                    <btn class="btn btn-white font-weight-bold p-0 px-1 black_slider" data-attribute="left">
                         &#62;
                     </btn>
 
@@ -85,7 +170,91 @@
             <!-- END SECTION TITLE -->
 
             <!-- SLIDER ROW -->
-            <div class="row d-flex flex-nowrap">
+            <div class="row d-flex flex-nowrap sliderBlack slider" data-attribute="0">
+                <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
+                    <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        width="100%" alt="" srcset="">
+                    <div
+                        class="bg-light text-dark d-flex align-items-center rounded-pill py-1 mb-2 px-3 card__caroussel_text">
+                        <span class="col-9 text_content"><strong>Name</strong><br />Plaats</span>
+                        <span class="col-3 d-flex justify-content-end "> <span
+                                class="p-2 rounded-circle bg-dark hover text-white like-btn d-flex align-items-center justify-content-center"><i
+                                    class="bi-heart-fill"></i></span>
+                        </span>
+                    </div>
+
+
+                </a>
+                <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
+                    <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        width="100%" alt="" srcset="">
+                    <div
+                        class="bg-light text-dark d-flex align-items-center rounded-pill py-1 mb-2 px-3 card__caroussel_text">
+                        <span class="col-9 text_content"><strong>Name</strong><br />Plaats</span>
+                        <span class="col-3 d-flex justify-content-end "> <span
+                                class="p-2 rounded-circle bg-dark hover text-white like-btn d-flex align-items-center justify-content-center"><i
+                                    class="bi-heart-fill"></i></span>
+                        </span>
+                    </div>
+
+
+                </a>
+                <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
+                    <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        width="100%" alt="" srcset="">
+                    <div
+                        class="bg-light text-dark d-flex align-items-center rounded-pill py-1 mb-2 px-3 card__caroussel_text">
+                        <span class="col-9 text_content"><strong>Name</strong><br />Plaats</span>
+                        <span class="col-3 d-flex justify-content-end "> <span
+                                class="p-2 rounded-circle bg-dark hover text-white like-btn d-flex align-items-center justify-content-center"><i
+                                    class="bi-heart-fill"></i></span>
+                        </span>
+                    </div>
+
+
+                </a>
+                <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
+                    <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        width="100%" alt="" srcset="">
+                    <div
+                        class="bg-light text-dark d-flex align-items-center rounded-pill py-1 mb-2 px-3 card__caroussel_text">
+                        <span class="col-9 text_content"><strong>Name</strong><br />Plaats</span>
+                        <span class="col-3 d-flex justify-content-end "> <span
+                                class="p-2 rounded-circle bg-dark hover text-white like-btn d-flex align-items-center justify-content-center"><i
+                                    class="bi-heart-fill"></i></span>
+                        </span>
+                    </div>
+
+
+                </a>
+                <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
+                    <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        width="100%" alt="" srcset="">
+                    <div
+                        class="bg-light text-dark d-flex align-items-center rounded-pill py-1 mb-2 px-3 card__caroussel_text">
+                        <span class="col-9 text_content"><strong>Name</strong><br />Plaats</span>
+                        <span class="col-3 d-flex justify-content-end "> <span
+                                class="p-2 rounded-circle bg-dark hover text-white like-btn d-flex align-items-center justify-content-center"><i
+                                    class="bi-heart-fill"></i></span>
+                        </span>
+                    </div>
+
+
+                </a>
+                <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
+                    <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
+                        width="100%" alt="" srcset="">
+                    <div
+                        class="bg-light text-dark d-flex align-items-center rounded-pill py-1 mb-2 px-3 card__caroussel_text">
+                        <span class="col-9 text_content"><strong>Name</strong><br />Plaats</span>
+                        <span class="col-3 d-flex justify-content-end "> <span
+                                class="p-2 rounded-circle bg-dark hover text-white like-btn d-flex align-items-center justify-content-center"><i
+                                    class="bi-heart-fill"></i></span>
+                        </span>
+                    </div>
+
+
+                </a>
                 <a href="profile.html" class="shadow col-2 mx-3 p-0 card__caroussel rounded-3">
                     <img src="https://images.unsplash.com/photo-1597223557154-721c1cecc4b0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80"
                         width="100%" alt="" srcset="">
@@ -101,6 +270,7 @@
 
                 </a>
 
+
             </div>
             <!-- END SLIDER ROW -->
 
@@ -110,6 +280,8 @@
 
     </div>
     <!-- END CONTENT -->
+    <script src="./js/sliderRed.js"></script>
+    <script src="./js/sliderBlack.js"></script>
 </body>
 
 </html>
